Project

General

Profile

Actions

Bug #10189

closed

fdbuffer: cast between incompatible function types

Added by Toomas Soome over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
2019-01-09
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Issue found by gcc 8 build:

    ../../common/fs/fdbuffer.c: In function 'fdb_iosetup':
    ../../common/fs/fdbuffer.c:411:28: error: cast between incompatible function types from 'void (*)(buf_t *)' {aka 'void (*)(struct buf *)'} to 'int (*)()' [-Werror=cast-function-type]
          (b_flags & B_ASYNC) ? (int (*)())fdb_iodone : NULL,
                                ^
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit b94c9724091d6587cd76f6ec562dc8888e3f31c0

commit  b94c9724091d6587cd76f6ec562dc8888e3f31c0
Author: Toomas Soome <tsoome@me.com>
Date:   2019-01-18T02:15:40.000Z

    10189 fdbuffer: cast between incompatible function types
    Reviewed by: Andy Fiddaman <af@citrus-it.net>
    Reviewed by: Gergő Mihály Doma <domag02@gmail.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF