10189 fdbuffer: cast between incompatible function types Reviewed by: Andy Fiddaman <af@citrus-it.net> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>